<resources>
    <string name="daily_quotes">Daily quotes</string>
    <string name="lama_ole_quotes">Lama Ole Nydal Quotes</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="daily_quotes_reminders">Daily quotes reminders</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="recommend_app">Recommend app</string>
    <string name="hello_text">Hi from Belarus, check out our app</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="about_buddha_palace">About Buddha Palace</string>
    <string name="made_with">Made with</string>
    <string name="in_belarus">in Belarus</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="i_want_to_receive_quotes_on_these_days">I want to receive quotes on these days</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wen">Wen</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="every_day">Every day</string>
    <string name="i_will_do_it">I will do it</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="any_time">At any time</string>
    <string name="press_last">Click again if you want to exit</string>
    <string name="exact_time">Exact time</string>
    <string name="name">name</string>
    <string name="favorite_quotes">Favorite quotes</string>
    <string name="add_your_first_favorite_quote">Add your first favorite quote</string>
</resources>